# testcmake

./: CMakeLists.txt  Makefile  main.cpp
app/: CMakeLists.txt  print.cpp
math_funcs/: CMakeLists.txt
third_part/pow/: pow.h
unit_tests/: world_test.cpp
